2008-06-02

	* Build.PL:

	Made version a build requirement

2008-05-23

	* t/*pod*.t:

	Added POD and POD coverage tests

